# docs/swagger.json
@@ -269,6 +269,145 @@
                 }
             }
         },
+        "/cert/hosting": {
+            "get": {
+                "description": "查询托管",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "cert/hosting"
+                ],
+                "summary": "查询托管",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "properties": {
+                                "code": {
+                                    "type": "integer"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/cert.HostingQueryResponse"
+                                },
+                                "msg": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/BadRequest"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "添加托管",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "cert/hosting"
+                ],
+                "summary": "添加托管",
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/cert.HostingAddRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "properties": {
+                                "code": {
+                                    "type": "integer"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/cert.HostingAddResponse"
+                                },
+                                "msg": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/BadRequest"
+                        }
+                    }
+                }
+            }
+        },
+        "/cert/hosting/{id}": {
+            "delete": {
+                "description": "删除托管",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "cert/hosting"
+                ],
+                "summary": "删除托管",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/cert.HostingDeleteRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "properties": {
+                                "code": {
+                                    "type": "integer"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/cert.HostingDeleteResponse"
+                                },
+                                "msg": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/BadRequest"
+                        }
+                    }
+                }
+            }
+        },
         "/cert/{id}": {
             "delete": {
                 "description": "删除证书",
@@ -1232,7 +1371,21 @@
             "type": "object"
         },
         "cdn.Item": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "createtime": {
+                    "type": "integer"
+                },
+                "domain": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "provider_name": {
+                    "type": "string"
+                }
+            }
         },
         "cdn.ListResponse": {
             "type": "object",
@@ -1296,7 +1449,12 @@
             }
         },
         "cert.CreateResponse": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                }
+            }
         },
         "cert.DeleteRequest": {
             "type": "object"
@@ -1317,6 +1475,67 @@
                     "type": "string"
                 }
             }
+        },
+        "cert.HostingAddRequest": {
+            "type": "object",
+            "properties": {
+                "cdn_id": {
+                    "type": "integer"
+                },
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
+        "cert.HostingAddResponse": {
+            "type": "object"
+        },
+        "cert.HostingDeleteRequest": {
+            "type": "object"
+        },
+        "cert.HostingDeleteResponse": {
+            "type": "object"
+        },
+        "cert.HostingItem": {
+            "type": "object",
+            "properties": {
+                "cdn": {
+                    "type": "string"
+                },
+                "cdn_id": {
+                    "type": "integer"
+                },
+                "cert_id": {
+                    "type": "integer"
+                },
+                "createtime": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "status": {
+                    "$ref": "#/definitions/cert_hosting_entity.CertHostingStatus"
+                }
+            }
+        },
+        "cert.HostingListResponse": {
+            "type": "object",
+            "properties": {
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "type": "object",
+                        "$ref": "#/definitions/cert.HostingItem"
+                    }
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
+        "cert.HostingQueryResponse": {
+            "type": "object"
         },
         "cert.Item": {
             "type": "object",
@@ -1358,6 +1577,17 @@
         },
         "cert_entity.CertStatus": {
             "type": "integer"
+        },
+        "cert_hosting_entity.CertHostingStatus": {
+            "description": "CertHostingStatus enum type:\n- CertHostingStatusActive: 1\n- CertHostingStatusDelete: 2\n- CertHostingStatusDeploy: 3\n- CertHostingStatusDeployFail: 4\n- CertHostingStatusFail: 5",
+            "type": "integer",
+            "enum": [
+                1,
+                2,
+                3,
+                4,
+                5
+            ]
         },
         "domain.AddRequest": {
             "type": "object",
